--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 VITE_GRAPHQL_ENDPOINT=https://fzkswiotczcbzniswyvjshdvda.appsync-api.eu-west-2.amazonaws.com/graphql
-VITE_GRAPHQL_API_KEY=""
+VITE_GRAPHQL_API_KEY=da2-placeholder-add-your-real-key-here
